[gd_scene load_steps=22 format=3 uid="uid://ie4fyb2punlu"]

[ext_resource type="Script" uid="uid://bcetlibe3k4ys" path="res://Stage/audio.gd" id="1_5olcg"]
[ext_resource type="AudioStream" uid="uid://bxikib2edqd2o" path="res://Entities/Balls/sfx_Ball_Bounce_Peg.wav" id="2_pgqns"]
[ext_resource type="AudioStream" uid="uid://et1p7g7llhe4" path="res://Entities/Balls/sfx_LongShot.wav" id="3_cqcg1"]
[ext_resource type="AudioStream" uid="uid://ya5xhbe24adr" path="res://Entities/Bucket/sfx_splash.wav" id="4_564a7"]
[ext_resource type="AudioStream" uid="uid://47bcnxeyrhqp" path="res://Entities/Launcher/sfx_shoot.wav" id="5_qf6oy"]
[ext_resource type="AudioStream" uid="uid://t4ithbjdh5hs" path="res://Entities/Balls/sfx_extra_ball.wav" id="6_tor12"]
[ext_resource type="AudioStream" uid="uid://uh3ng45y3ant" path="res://Entities/Balls/sfx_crowd_anticipation.wav" id="7_fajnq"]
[ext_resource type="AudioStream" uid="uid://dmfw0541is3i6" path="res://Entities/Balls/sfx_crowd_anticipation_disappointed.wav" id="8_f6syg"]
[ext_resource type="AudioStream" uid="uid://b7x6g8okvpa0f" path="res://Entities/Balls/sfx_crowd_cheering.wav" id="9_pgqns"]
[ext_resource type="AudioStream" uid="uid://brvspd8trovat" path="res://Entities/Point Hole/sfx_pointhole_splash.wav" id="10_pgqns"]
[ext_resource type="AudioStream" uid="uid://gsgb3albm86w" path="res://LevelTransition/sfx_transition_bubble.wav" id="11_564a7"]
[ext_resource type="AudioStream" uid="uid://cvbifbp80hd6f" path="res://LevelTransition/sfx_transition_bubble_start.wav" id="12_qf6oy"]
[ext_resource type="AudioStream" uid="uid://dq30ea1gf6mcd" path="res://Menu/sfx_menu_move.wav" id="13_fajnq"]
[ext_resource type="AudioStream" uid="uid://co2sm1kc0tlr3" path="res://Menu/sfx_menu_select.wav" id="14_f6syg"]
[ext_resource type="AudioStream" uid="uid://b4amyol5ps7qc" path="res://Menu/sfx_menu_back.wav" id="15_enkql"]
[ext_resource type="AudioStream" uid="uid://bor8ur6so684v" path="res://Stage/barrel_close_SFX.wav" id="16_f6syg"]
[ext_resource type="AudioStream" uid="uid://bdn48pj3ya7al" path="res://Stage/coin_transfer_SFX.wav" id="17_enkql"]
[ext_resource type="Script" uid="uid://bkxpabxstsxfj" path="res://music_manager.gd" id="18_il71m"]
[ext_resource type="AudioStream" uid="uid://dfwffwoql32te" path="res://Entities/MissedBallFeature/coin_flip.wav" id="18_v84do"]
[ext_resource type="AudioStream" uid="uid://tutbsqwhrhp5" path="res://Entities/MissedBallFeature/coin_toss.wav" id="19_3gqo2"]
[ext_resource type="AudioStream" uid="uid://dpomjhpdvy3q2" path="res://Entities/MissedBallFeature/sad.wav" id="20_3gqo2"]

[node name="Audio" type="Node2D" groups=["Audio"]]
script = ExtResource("1_5olcg")
metadata/_edit_lock_ = true

[node name="SFXHitPeg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_pgqns")
volume_db = 5.333
panning_strength = 0.0

[node name="SFXHitPegLongShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cqcg1")
panning_strength = 0.0

[node name="SFXBucketScore" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_564a7")
panning_strength = 0.0

[node name="SFXShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qf6oy")
volume_db = 5.012
panning_strength = 0.0

[node name="SFXExtraBall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tor12")
volume_db = 6.0
panning_strength = 2.0

[node name="SFXCrowdExcited" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fajnq")
panning_strength = 0.0

[node name="SFXCrowdDisappointed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_f6syg")
panning_strength = 0.0

[node name="SFXCrowdCheer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_pgqns")
panning_strength = 0.0

[node name="SFXBallInBonusHole" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_pgqns")
volume_db = 3.812
panning_strength = 0.0

[node name="SFXTransitionBubbleStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_qf6oy")
panning_strength = 0.0

[node name="SFXTransitionBubble" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_564a7")
panning_strength = 0.0

[node name="SFXMenuMove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_fajnq")
panning_strength = 0.0

[node name="SFXMenuSelect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_f6syg")
panning_strength = 0.0

[node name="SFXMenuBack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_enkql")
panning_strength = 0.0

[node name="SFXBarrelClose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_f6syg")
panning_strength = 2.0

[node name="SFXWealthTransfer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_enkql")
panning_strength = 2.0

[node name="SFXCoinFlip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_v84do")
panning_strength = 0.0

[node name="SFXCoinToss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_3gqo2")
panning_strength = 0.0

[node name="SFXSad" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_3gqo2")
volume_db = 7.638
panning_strength = 0.0

[node name="MusicManager" type="Node2D" parent="."]
script = ExtResource("18_il71m")

[node name="MusicPlayer1" type="AudioStreamPlayer2D" parent="MusicManager"]
panning_strength = 0.0
bus = &"Music"

[connection signal="finished" from="MusicManager/MusicPlayer1" to="MusicManager" method="_on_music_player_1_finished"]
